bk_ida/gccida/c2/expand_stmt
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1233:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1235:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1236:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1237:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1239:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1240:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1242:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *clobbers; // [rsp+10h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1243:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *outputs; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1281:19: error: expected expression
if ( ( tree_node *)global_trees != elements ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1281:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)global_trees != elements ) 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1416:7: error: use of undeclared identifier 'genrtl_case_label_explained'
if ( !genrtl_case_label_explained ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/c-semantics.c:1419:1: error: use of undeclared identifier 'genrtl_case_label_explained'
genrtl_case_label_explained = 1; 
^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_stmt/src/obj/c-semantics.o] Error 1
